# amis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: README.md
docs/: public-domain-corpus.md  semantic-index.md
requirements/locks/: semantic-index-macos-arm64-py313.txt
src/amis/: __init__.py  __main__.py  _path_safety.py  chunking.py  cli.py  embeddings.py  hybrid.py  ingestion.py  lexical.py  model_cache.py  model_spec.py  public_corpus.py  retrieval.py  semantic_index.py
tests/: conftest.py  epub_factory.py  normalized_factory.py  semantic_factory.py  test_chunking.py  test_cli.py  test_hybrid.py  test_ingestion.py  test_lexical.py  test_model_cache.py  test_public_corpus.py  test_retrieval.py  test_semantic_index.py
