[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "amis"
version = "0.1.0"
description = "Local-first retrieval and question answering for a literary corpus"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "numpy>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "build>=1.3,<2",
    "hatchling>=1.27,<2",
    "pip-tools>=7.5,<8",
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]
semantic-index = [
    "huggingface-hub>=1.18,<1.19",
    "sentence-transformers>=5.5,<5.6",
    "torch>=2.12,<2.13",
    "transformers>=5.10,<5.11",
]

[project.scripts]
amis = "amis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amis"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
